lab1/Test/L1-A-13-49.output
Error Type A at Line 4
Error Type B at Line 16
Error Type B at Line 26
Error Type B at Line 28
Error Type B at Line 34
Error Type B at Line 35
Error Type B at Line 41
Error Type B at Line 42
Error Type B at Line 43
Error Type A at Line 49
Error Type B at Line 49
